[package]
name = "rust-tekton-nodes"
version = "0.1.0"
edition = "2021"

# TODO: Audit these.
[dependencies]
anyhow = { version = "1.0" }
axum = { version="0.5.12", features=["multipart"] }
axum-extra = {version="0.3.1", features=["spa"]}
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.5", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

